# nedit-ng

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  COPYRIGHT  README  README.md  cspell.config.yaml  cspell.json  nedit-ng.code-workspace  nedit-ng.desktop  sonar-project.properties  versions.json
Ext/: CMakeLists.txt
Interpreter/: CMakeLists.txt  DataValue.h  Printf.h  interpret.cpp  interpret.h  parse.cpp  parse.h  parse.y  parser.y
Interpreter/prebuilt/: parser.cpp  parser.hpp
Interpreter/premade/: parser.cpp
Regex/: CMakeLists.txt  Common.h  Compile.cpp  Compile.h  Constants.h  Decompile.cpp  Decompile.h  Execute.cpp  Execute.h  Opcodes.h  Reader.h  Regex.cpp  Regex.h  RegexError.cpp  RegexError.h  Substitute.cpp  Substitute.h
Regex/test/: CMakeLists.txt  Test.cpp  tests.txt
Settings/: CMakeLists.txt  FromInteger.h  IndentStyle.h  ReplaceAllDefaultScope.h  SearchType.h  Settings.cpp  Settings.h  ShowMatchingStyle.h  TruncSubstitution.h  VirtKeyOverride.h  WrapStyle.h  from_integer.h
Util/: CMakeLists.txt  ClearCase.cpp  Environment.cpp  FileSystem.cpp  Host.cpp  Input.cpp  Resource.cpp  ServerCommon.cpp  String.cpp  System.cpp  User.cpp  fileUtils.cpp  regex.cpp  utils.cpp
client/: CMakeLists.txt  nc.cpp  system.h
import/: CMakeLists.txt  Import.cpp  import.cpp
libs/yaml/: CMakeLists.txt  Yaml.cpp
libs/yaml-cpp/: CMakeLists.txt
libs/yaml-cpp-0.8.0/: CMakeLists.txt
rbTree/: CMakeLists.txt  rbTree.cpp  rbTree.h
regex/: CMakeLists.txt  Common.h  Constants.h  ExecuteContext.cpp  ExecuteContext.h  ParseContext.cpp  ParseContext.h  regularExp.cpp  regularExp.h
source/: BlockDragTypes.h  Bookmark.h  CMakeLists.txt  CallTip.h  CallTipWidget.cpp  CallTipWidget.h  CallTipWidget.ui  CloseMode.h  Color.cpp  Color.h  CommandRecorder.cpp  CommandRecorder.h  CommandSource.h  CursorStyles.h  DefaultPatternSet01.txt  DefaultPatternSet03.txt  DefaultPatternSet04.txt  DefaultPatternSet07.txt  DefaultPatternSet08.txt  DefaultPatternSet10.txt  DefaultPatternSet11.txt  DefaultPatternSet14.txt  DefaultPatternSet19.txt  DefaultPatternSet20.txt  DefaultPatternSet22.txt  DefaultPatternSet23.txt  DefaultPatternSet24.txt  DefaultPatternSet25.txt  DefaultPatternSet27.txt  Dialog.cpp  Dialog.h  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogColors.cpp  DialogColors.h  DialogDrawingStyles.cpp  DialogDrawingStyles.h  DialogDrawingStyles.ui  DialogDuplicateTags.cpp  (+323 more)
source/doc/: 02 - Selecting Text.html  05 - Using the Mouse.html  07 - Shifting and Filling.html  10.html  11.html  13 - Syntax Highlighting.html  18.html  19.html  20.html  23.html  25.html  26.html  27 - Action Routines.html  28.html  3.html  34 - NEdit Command Line.html  36 - Crash Recovery.html  37.html  38 - GNU General Public License.html  8.html  9.html
source/include/: BlockDragTypes.h  CallTip.h  CursorStyles.h  HighlightStyle.h  MultiClickStates.h  Point.h  Rect.h  ReparseContext.h  SearchType.h  ShiftDirection.h  StyleTableEntry.h  UserBGMenuCache.h  graphicExposeTranslationEntry.h
source/res/: DefaultCommonMacros.txt  DefaultLanguageModes.txt  DefaultMacroCommands.txt  DefaultPatternSet12.txt  DefaultPatternSet13.txt  DefaultPatternSet15.txt  DefaultPatternSet18.txt  DefaultShellCommands.txt  DefaultShellCommandsFreeBSD.txt  DefaultShellCommandsLinux.txt  DefaultStyles.txt  DefaultStyles.xml  n.bm  nedit.bm  nedit.xpm
source/ui/: CallTipWidget.cpp  CallTipWidget.h  CallTipWidget.ui  Calltip.cpp  Calltip.h  Calltip.ui  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogColors.cpp  DialogColors.h  DialogColors.ui  DialogDrawingStyles.cpp  DialogDrawingStyles.h  DialogDrawingStyles.ui  DialogDuplicateTags.cpp  DialogDuplicateTags.h  DialogDuplicateTags.ui  DialogExecuteCommand.cpp  DialogExecuteCommand.h  DialogExecuteCommand.ui  DialogFilter.cpp  DialogFilter.h  DialogFilter.ui  DialogFind.cpp  DialogFind.h  DialogFind.ui  DialogFontSelector.cpp  DialogFontSelector.h  DialogFontSelector.ui  DialogFonts.cpp  DialogFonts.h  DialogFonts.ui  DialogLanguageModes.cpp  DialogLanguageModes.h  DialogLanguageModes.ui  DialogMacroCommands.ui  DialogMacros.cpp  DialogMacros.h  DialogMacros.ui  (+65 more)
src/: Bookmark.h  CMakeLists.txt  CallTip.h  CallTipWidget.cpp  CallTipWidget.h  CallTipWidget.ui  CloseMode.h  CommandRecorder.cpp  CommandRecorder.h  CommandSource.h  CommonDialog.h  Dialog.cpp  Dialog.h  DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DialogColors.cpp  DialogColors.h  DialogColors.ui  DialogDrawingStyles.cpp  DialogDrawingStyles.h  DialogDrawingStyles.ui  DialogDuplicateTags.cpp  DialogDuplicateTags.h  DialogExecuteCommand.cpp  DialogExecuteCommand.h  DialogExecuteCommand.ui  DialogFilter.cpp  DialogFilter.h  DialogFilter.ui  DialogFind.cpp  DialogFind.h  DialogFind.ui  DialogFonts.cpp  DialogFonts.h  DialogFonts.ui  DialogLanguageModes.cpp  DialogLanguageModes.h  DialogLanguageModes.ui  DialogMacros.cpp  (+174 more)
src/res/: DefaultBackgroundMenuCommands.txt  DefaultContextMenu.yaml  DefaultHighlightPatterns.txt  DefaultLanguageModes.yaml  DefaultLanguageModes.yml  DefaultMacroMenu.yaml  DefaultPatternSet00.txt  DefaultPatternSet02.txt  DefaultPatternSet05.txt  DefaultPatternSet06.txt  DefaultPatternSet09.txt  DefaultPatternSet10.txt  DefaultPatternSet16.txt  DefaultPatternSet17.txt  DefaultPatternSet21.txt  DefaultPatternSet26.txt  DefaultPatternSets.yaml  DefaultPatternSets.yml  DefaultShellCommandsLinux.txt  DefaultShellCommandsUnix.txt  DefaultShellMenuFreeBSD.yaml  DefaultShellMenuLinux.yaml  DefaultShellMenuUnix.yaml  (+8 more)
util/: CMakeLists.txt  ClearCase.cpp  ClearCase.h  DialogF.c  DialogF.cpp  DialogF.h  FileFormats.h  Input.cpp  MotifHelper.h  ServerCommon.cpp  ServerCommon.h  XString.h  algorithm.h  check_lin_tif.c  check_lin_tif.cpp  clearcase.c  clearcase.cpp  clearcase.h  fileUtils.c  fileUtils.cpp  fileUtils.h  fontsel.c  fontsel.cpp  fontsel.h  getfiles.c  getfiles.cpp  getfiles.h  managedList.c  managedList.cpp  managedList.h  memory.h  misc.c  misc.cpp  misc.h  motif.cpp  motif.h  nullable_string.h  path_error.h  prefFile.c  prefFile.cpp  (+13 more)
(+401 files in other folders)
